--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -279,7 +279,7 @@
             android:paddingHorizontal="100dp"
             app:cornerRadius="300dp"
             android:layout_marginVertical="30dp"
-            android:onClick="returnhome"
+            android:onClick="next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
