--- a/app/src/main/res/layout/fragment_track_diet_tab.xml
+++ b/app/src/main/res/layout/fragment_track_diet_tab.xml
@@ -210,7 +210,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
             app:cardCornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/track_progress_label">
@@ -351,6 +350,47 @@
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <!-- Text View for experimental features label -->
+        <TextView
+            android:id="@+id/bar_chart_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="Experimental features"
+            android:textColor="#000000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/track_energy_card" />
+
+        <!-- Linear Layout for BarGraph-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bar_chart_label">
+
+            <!-- Card View for BarGraph-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/bar_chart_card"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_margin="30dp"
+                app:cardCornerRadius="20dp">
+
+                <!-- Bar chart for BarGraph-->
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" />
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
