--- a/app/src/main/res/layout/fragment_track_diet_tab.xml
+++ b/app/src/main/res/layout/fragment_track_diet_tab.xml
@@ -203,7 +203,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/track_carbohydrates_display_card" />
 
-
+        <!-- Text view for empty diet target warning -->
         <TextView
             android:id="@+id/track_target_not_found_label"
             android:layout_width="wrap_content"
@@ -214,7 +214,7 @@
             android:textColor="#ff0000"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/track_progress_label" />/>
+            app:layout_constraintTop_toBottomOf="@id/track_progress_label" />
 
         <!-- Card View for energy progress-->
         <androidx.cardview.widget.CardView
