--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -51,22 +51,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_container" />
 
+    <!-- Text View for register age label -->
+    <TextView
+        android:id="@+id/register_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="20dp"
+        android:text="Please enter your"
+        android:textAlignment="center"
+        android:textColor="#006666"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_progressBar" />
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/register_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/register_progressBar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_progressBar"
-        app:layout_constraintVertical_bias="1.0">
-
-    </androidx.viewpager2.widget.ViewPager2>
-
-
-    <!--
-        android:backgroundTint="#1EC826"-->
+        app:layout_constraintTop_toBottomOf="@+id/register_progressBar"  />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
