--- a/app/src/main/res/layout/fragment_track_diet_tab.xml
+++ b/app/src/main/res/layout/fragment_track_diet_tab.xml
@@ -441,23 +441,83 @@
 
             </androidx.cardview.widget.CardView>
 
-            <!-- Card View for bar graph of water intake visualization -->
+            <!-- Card View for water intake bar chart -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/track_water_intake_bar_chart_card"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 app:cardCornerRadius="20dp">
 
-                <!-- Bar chart for water intake visualization -->
-                <com.github.mikephil.charting.charts.BarChart
-                    android:id="@+id/track_water_intake_bar_chart"
+                <!-- Linear Layout for water intake bar chart -->
+                <LinearLayout
+                    android:id="@+id/track_water_intake_bar_chart_linear_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Text View for water intake bar chart -->
+                    <TextView
+                        android:id="@+id/track_water_intake_chart_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:text="Water Intake"
+                        android:textColor="#000000"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <!-- Bar chart for water intake visualization -->
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:id="@+id/track_water_intake_bar_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginBottom="10dp" />
+
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
+            <!-- Card View for weight tracker chart -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/track_weight_curved_line_chart_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                app:cardCornerRadius="20dp">
+
+                <!-- Linear Layout for weight tracker line chart -->
+                <LinearLayout
+                    android:id="@+id/track_weight_curved_line_chart_linear_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Text View for weight tracker line chart -->
+                    <TextView
+                        android:id="@+id/track_weight_curved_line_chart_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:text="Weight tracker"
+                        android:textColor="#000000"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <!-- Line chart (Curved) for weight tracker -->
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/track_weight_curved_line_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginBottom="10dp" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
