--- a/app/src/main/res/layout/fragment_track_diet_tab.xml
+++ b/app/src/main/res/layout/fragment_track_diet_tab.xml
@@ -357,7 +357,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="Experimental features"
+            android:text="Nutrient intake tracker"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold"
