--- a/app/src/main/res/layout/register_fragment_weight.xml
+++ b/app/src/main/res/layout/register_fragment_weight.xml
@@ -3,37 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Linear Layout for register weight contents -->
-    <LinearLayout
-        android:id="@+id/register_weight_linear_layout"
+    <!-- Include number picker fragment for selecting weight -->
+    <include
+        layout="@layout/register_sub_fragment_number_pickers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
-
-        <!-- Edit Text for weight field -->
-        <EditText
-            android:id="@+id/register_weight_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="  50  "
-            android:inputType="number"
-            android:maxLength="3"
-            android:textColor="#49569E"
-            android:textSize="40sp"
-            android:textStyle="bold" />
-
-        <!-- Text View for weight completion label -->
-        <TextView
-            android:id="@+id/register_weight_completion_label"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:text="Kg"
-            android:textColor="#49569E"
-            android:textSize="40sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
+        android:layout_centerInParent="true" />
 
     <!-- Button for moving to next page -->
     <Button
