--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".register.RegisterActivity">
 
+    <!-- Linear Layout for top bar -->
     <LinearLayout
         android:id="@+id/top_container"
         android:layout_width="match_parent"
@@ -39,6 +40,7 @@
 
     </LinearLayout>
 
+    <!-- Progress Bar for indicating current tab position -->
     <ProgressBar
         android:id="@+id/register_progressBar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -51,15 +53,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_container" />
 
-    <!-- Text View for register age label -->
+    <!-- Text View for label to ask user for various inputs -->
     <TextView
         android:id="@+id/register_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_margin="20dp"
-        android:text="Please enter your"
+        android:text="Please enter your details"
         android:textAlignment="center"
         android:textColor="#006666"
         android:textSize="25sp"
@@ -68,6 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_progressBar" />
 
+    <!-- View pager for tab content -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/register_view_pager"
         android:layout_width="match_parent"
