--- a/app/src/main/res/layout/register_fragment_gender.xml
+++ b/app/src/main/res/layout/register_fragment_gender.xml
@@ -4,20 +4,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Linear Layout for register age contents -->
+    <!-- Linear Layout for gender selection content -->
     <LinearLayout
         android:id="@+id/register_gender_linear_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
 
+        <!-- Card View for male card -->
         <androidx.cardview.widget.CardView
             android:id="@+id/register_gender_male_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            app:cardCornerRadius="20dp"
-            >
+            app:cardCornerRadius="20dp">
 
             <!-- Text View for male label -->
             <TextView
@@ -32,6 +32,7 @@
 
         </androidx.cardview.widget.CardView>
 
+        <!-- Card View for female card -->
         <androidx.cardview.widget.CardView
             android:id="@+id/register_gender_female_card"
             android:layout_width="wrap_content"
@@ -39,7 +40,7 @@
             android:layout_margin="10dp"
             app:cardCornerRadius="20dp">
 
-            <!-- Text View for male label -->
+            <!-- Text View for female label -->
             <TextView
                 android:id="@+id/register_gender_female_label"
                 android:layout_width="wrap_content"
